[tool.poetry]
name = "torchbeast"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks", "Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typed-argument-parser = "^1.7.0"
transformers = "^4.11.3"
sweep-logger = {git = "https://github.com/ethanabrooks/sweep-logger.git", rev = "main"}
gym = {version = "^0.18.3", extras = ["atari"]}
torch = [
    {platform = 'darwin', url = "https://download.pytorch.org/whl/cpu/torch-1.10.0-cp39-none-macosx_10_9_x86_64.whl"},
    {platform = 'linux', url = "https://download.pytorch.org/whl/cu113/torch-1.10.0%2Bcu113-cp39-cp39-linux_x86_64.whl"}
]
transforms3d = "^0.3.1"
sapien = "^1.1.1"


[tool.poetry.dev-dependencies]
black = "^21.6b0"
ipython = "^7.25.0"
ipdb = "^0.13.9"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
